# Parabola

./: .gitignore  CMakeLists.txt  Parabola.py  README.md  __init__.py  create_parabola_light.sh  install.sh  parabola.py  pyproject.toml
CPP_Extension/: Makefile
CPP_Extension/src/: AtomicBasis.cpp  get_T_Matrix.cpp
Modules/: AtomicBasis.py  ConvTests.py  Electronic_Structure (copy).txt  Electronic_Structure.py  Geometry.py  LCC.py  MolecularStructure.py  Molecular_Graph.py  Molecular_Structure.py  PhysConst.md  PhysConst.py  Read.py  Structure.py  Symmetry.py  TDDFT.py  Util.py  VibAna.py  VibrationalStructure.py  Vibrational_Structure.py  Wannier.py  Write.py  coordinate_tools.py  cp2k_util.py
Modules/PhysConst/: PhysConst.py
Tests/BandUnfolding_Tests/: BandUnfolding_Test.py  input_file_periodic3x3.inp  test_periodic_3x3.xyz
Tests/BandUnfolding_Tests/2D/: input_file_periodic.inp  test_periodic.xyz
Tests/BandUnfolding_Tests/Linear_Chain/: input_file_periodic.inp
Tests/LCC_Tests/: LCC_Test.py
Tests/LCC_Tests/getLCC/Linear_Coupling_Constants/: BasisHessian  Norm-Factors.npy  Normal-Mode-Energies.npy  Pyrazine_opt.xyz  normalized-Carthesian-Displacements.npy
Tests/R-Operator_Tests/: R-Operator_Test.py  test_periodic.xyz
Tests/T_Matrix_Tests/: T_Matrix_Test.py
Tests/T_Matrix_Tests/OBC/: Benzene_CellSize_Tests.inp
Tests/T_Matrix_Tests/PBC/: input_file.inp
Tests/Vib_Ana_Test/: Norm-Factors.npy  Vib_Ana_Test.py  normalized-Carthesian-Displacements.npy
Tests/Vib_Ana_Test/Pyrazine_Test/: BasisHessian  Mode_Energies_Reference.npy
run/: __main__.py
src/CPP_Extension/: AtomicBasis.cpp
src/parabola/: AtomicBasis.cpp  AtomicBasis.py  ConvTests.py  Electronic_Structure.py  Geometry.py  Molecular_Structure.py  PhysConst.py  Read.py  Symmetry.py  TDDFT.py  Util.py  VibAna.py  Vibrational_Structure.py  Wannier.py  Wannier_final.py  Write.py  __init__.py  __main__.py  _extension.pyi  atomic_basis.py  coordinate_tools.py  cp2k_util.py  electronics.py  linear_coupling_constants.py  structure.py  vibrations.py  wannier.py  workflow_wannier.py
tests/: test_get_momentum_operators.py  test_get_phase_operators.py  test_get_position_operators.py  test_get_t_matrix.py  test_local_potential_on_xyz_grid.py  test_sublattice.py  test_wfn_on_xyz_grid.py
tests/data/OBC/: Benzene_opt.xyz  KSHamiltonian.npy  KS_Eigenvalues.npy  KS_orth_Eigenstates.npy  OLM_OBC.npy  OLMm12.npy  local_potential_on_xyz_grid.npy  momentum_operators.npy  phase_operators.npy  position_operators.npy  wfn_on_xyz_grid.npy
tests/data/PBC/: Benzene.xyz  KSHamiltonian.npy  KS_Eigenvalues.npy  KS_orth_Eigenstates.npy  OLM.npy  OLMm12.npy  local_potential_on_xyz_grid.npy  momentum_operators.npy  overlap_matrix.npy  phase_operators.npy  position_operators.npy  wfn_on_xyz_grid.npy
tests/data/sublattice/: graphene_supercell331.inp  graphene_supercell331.molecular_structure.pickle  reconstructed_hexagonal_supercell_coordinates.npy  structure_sc331.xyz
(+429 files in other folders)
