[build-system]
requires = ["scikit-build-core>=0.10",
    "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "parabola"
version = "1.0.0"
authors = [
    { name = "Maximilian F. X. Dorfner", email = "maximilian.dorfner@tum.de" },
    { name = "Laura Fuchs", email = "laura.fuchs@tum.de" },
    { name = "Nisarg Trivedi", email = "nisarg.trivedi@tum.de" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3"
]
#url = "https://gitlab.lrz.de/00000000014ADFB2/parabola"
dependencies = [
    "numpy>=2.3.0",
    "matplotlib >= 1.5.1",
    "typing",
    "scipy",
    "ipython",
    "pydantic>=2.11.7",
    "pybind11-stubgen>=2.5.5",
    "spglib>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pybind11-stubgen",
    "black"
]

[project.scripts]
parabola = "parabola.__main__:main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
ninja.version = ">=1.10"
cmake.version = ">=3.10"

